Jump to matched term when opening a file from the search; fixes #58

--- a/mainapp/assets/css/_file.scss
+++ b/mainapp/assets/css/_file.scss
@@ -59,7 +59,7 @@
   }
 
   // This gives a nice two pane layout on medium-sized screens
-  @media (max-width: $container-width * 2) {
+  @media (max-width: $container-width * 2) and (min-width: breakpoint-max(lg, $grid-breakpoints)) {
     .right-counterweight {
       display: none;
     }
@@ -67,9 +67,7 @@
 }
 
 .file-switcher {
-  // Don't ask me why this work
-  // https://stackoverflow.com/a/27461685/3549270
-  max-width: calc(#{$container-width} / 2);
+  max-width: $container-width;
   flex-direction: column;
 
   @include media-breakpoint-up(lg) {
@@ -81,6 +79,8 @@
   }
 
   > div {
+    // Don't ask me why this work
+    // https://stackoverflow.com/a/27461685/3549270
     overflow: hidden;
     flex-grow: 1;
     position: relative;
